2008-01-15  Michael Olson  <mwolson@gnu.org>

	* erc-backend.el (erc-server-coding-system): Docfix.
	(erc-coding-system-for-target): Pass the `target' argument along
	as the first and only argument.  It's not good to just depend on a
	dynamic binding.

2008-01-10  Michael Olson  <mwolson@gnu.org>

	* erc-backend.el (321, 322): Split message-displaying parts into
	new functions, which are added to each response's respective
	hook.  This makes them easier to disable.

	* erc-list.el: New file from Tom Tromey.  Use erc-propertize
	instead of propertize.  Require 'erc.
	(list): New module definition.  Remove message-displaying
	functions for 321 and 322 response handlers when enabling the
	module, and restore them when disabling.  As a sanity check,
	remove the erc-list-handle-322 function when disabling the module.
	(erc-list-handle-322): Handle the case where we run the LIST
	command, but do not go through the normal steps.
	(erc-cmd-LIST): Add docstring.  Strip initial space from line if
	it is non-nil.  Use make-local-variable to silence compiler
	warning.  Capture current buffer and pass it to
	erc-list-install-322-handler.
	(erc-list-install-322-handler): Take server-buffer argument, so
	that we are certain of being in the right buffer.  Use 4th
	argument to add-hook, so that erc-server-322-functions is only
	modified in one buffer.

	* erc-list-old.el: Renamed from old erc-list.el.

	* erc.el (erc-modules): Add list-old.
	(erc-set-topic): Handle case where there are no newlines in the
	existing topic, which happens when /LIST is run.
	(erc-notice-face): If we have less than 88 colors, make this
	blue.  Otherwise the text will be pink in a tty, which looks
	dreadful.  Thanks to e1f for the report.
	(erc-remove-parsed-property): New option that determines whether
	to remove the erc-parsed property after displaying a message.
	This should have the effect of making ERC take up less memory.
	(erc-display-line-1): Use it.
